<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:text="@string/evento"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/etFormDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/descri_o"
            android:importantForAutofill="no"
            android:inputType="textShortMessage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/sbFormNota"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:max="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btFormFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginEnd="50sp"
            android:layout_marginRight="50sp"
            android:background="@drawable/btn_shape"
            android:text="@string/foto"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/ivFormImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:contentDescription="@string/bitmap_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btFormCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/btn_shape"
            android:text="@string/cancelar"
            android:textColor="#FFFFFF"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btFormSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/salvar"
            android:textColor="#FFFFFF"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>